fix: align cards

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,10 +1,7 @@
 .elements {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 282px);
-  column-gap: 17px;
-  row-gap: 20px;
-  width: 100%;
-  justify-content: flex-start;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 51px;
 }
 
@@ -13,3 +10,4 @@
     margin-top: 36px;
   }
 }
+
